--- a/cart.html
+++ b/cart.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="css/detail.css" rel="stylesheet">
+    <link href="css/teddy1.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -22,7 +22,7 @@
 
 
 
-    <title>Teddy</title>
+    <title>Shopping Cart</title>
 </head>
 
 <body>
@@ -46,7 +46,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="">About us</a>
                             </li>
-                            <li class="nav-item cartspan">
+                            <li class="nav-item">
                                 <a class="nav-link" href="cart.html"><i class="fas fa-shopping-cart"></i> Cart <span>0</span></a>
                             </li>
                         </ul>
@@ -55,42 +55,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-5">
-                <img class="teddy1" src="">
-
-
-            </div>
-
-            <div class="col-md-7">                
-                <h2></h2>
-                <p class="code"></p>
-                <p class="price"></p>
-                <p><strong>Availability:</strong> In Stock</p>
-                <p><strong>Brand:</strong> ATX Company</p>
-                <p class="description"></p>
-                <label>Quantity: </label>                
-                <input type="number" value="1" min="1">               
-                <button type="button" class="btn btn-primary cart">Add to Cart</button>            
-                
-                    <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
-                      Color
-                    </button>
-                    <div class="dropdown-menu">
-                      <a class="dropdown-item btn-tan" href="#"></a>
-                      <a class="dropdown-item btn-chocolate" href="#"></a>
-                      <a class="dropdown-item btn-light" href="#"></a>
-                      <a class="dropdown-item btn-dark" href="#"></a>
-                    </div>
-                  </div>
-
-
-            </div>
-
-
-        </div>
-
+    
     </div>
     <div class="bg-light mt-5">
         <div class="container">
@@ -107,7 +72,7 @@
             </div>
         </div>
     </div>
-<script src="detail.js"></script>
+<script src="teddy1.js"></script>
 </body>
 
 </html>
