--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/0127cc7a74.js" crossorigin="anonymous"></script>
 
 
 
@@ -35,7 +36,7 @@
                                 <a class="nav-link" href="">About us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="">Cart</a>
+                                <a class="nav-link" href="cart.html"><i class="fas fa-shopping-cart"></i> Cart <span>0</span></a>
                             </li>
                         </ul>
                     </div>
