--- a/cart.html
+++ b/cart.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="css/teddy1.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -46,7 +45,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="">About us</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item cartspan">
                                 <a class="nav-link" href="cart.html"><i class="fas fa-shopping-cart"></i> Cart <span>0</span></a>
                             </li>
                         </ul>
@@ -55,6 +54,75 @@
             </div>
         </div>
     </div>
+
+    <div class="container">
+        <div class="row m-auto">           
+            <div class="col-3 text-center mt-5 border border-dark rounded">Image</div>
+            <div class="col-3 text-center mt-5 border border-dark rounded">Product</div>
+            <div class="col-3 text-center mt-5 border border-dark rounded">Quantity</div>
+            <div class="col-3 text-center mt-5 border border-dark rounded">Price</div>
+        </div>
+        <div class="row createcart">           
+            
+        </div>
+        <div class="row">
+            <div class="col-9 mt-4"></div>
+            <div class="col-3 mt-4 price"></div>            
+        </div>
+        <div class="row">
+            <div class="col-sm-12 col-lg-4 mt-2">
+                <div class="form-group">
+                    <label for="firstName">First Name:</label>
+                    <input type="text" class="form-control" id="firstname" placeholder="First Name" name="First Name" required>
+                  </div>
+            </div>
+            <div class="col-sm-12 col-lg-4 mt-2">
+                <div class="form-group">
+                    <label for="lastName">Last Name:</label>
+                    <input type="text" class="form-control" id="lastname" placeholder="Last Name" name="Last Name" required>
+                  </div>
+            </div>
+            <div class="col-sm-12 col-lg-4 mt-2">
+                <div class="form-group">
+                    <label for="email">Email Address:</label>
+                    <input type="email" class="form-control" id="email" placeholder="Enter your email address" name="Email Address" required>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 col-lg-6 mt-1">
+                <div class="form-group">
+                    <label for="address">Address:</label>
+                    <input type="text" class="form-control" id="address" placeholder="Enter your address" name="Address" required>
+                  </div>
+            </div>
+            <div class="col-sm-12 col-lg-2 mt-1">
+                <div class="form-group">
+                    <label for="postcode">Post Code:</label>
+                    <input type="text" class="form-control" id="postcode" placeholder="Post code" name="Post Code" required>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-4 mt-1">
+                <div class="form-group">
+                    <label for="city">City:</label>
+                    <input type="text" class="form-control" id="city" placeholder="Enter your city" name="City" required>
+                  </div>
+            </div>            
+        </div>
+        <div class="form-group">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="gridCheck">
+              <label class="form-check-label" for="gridCheck">
+                Remind me
+              </label>
+            </div>
+          </div>
+          <button type="submit" class="btn btn-primary" id="finish">Finish shopping</button>
+
+
+    </div>
+
+
     
     </div>
     <div class="bg-light mt-5">
@@ -72,7 +140,7 @@
             </div>
         </div>
     </div>
-<script src="teddy1.js"></script>
+<script src="cart.js"></script>
 </body>
 
 </html>
