--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="">About us</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item cartspan">
                                 <a class="nav-link" href="cart.html"><i class="fas fa-shopping-cart"></i> Cart <span>0</span></a>
                             </li>
                         </ul>
