--- a/confirmation.html
+++ b/confirmation.html
@@ -54,75 +54,15 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row m-auto">           
-            <div class="col-3 text-center mt-5 border border-dark rounded">Image</div>
-            <div class="col-3 text-center mt-5 border border-dark rounded">Product</div>
-            <div class="col-3 text-center mt-5 border border-dark rounded">Quantity</div>
-            <div class="col-3 text-center mt-5 border border-dark rounded">Price</div>
-        </div>
-        <div class="row createcart">           
+<div class="container">
+    <div class="row">
+        <div class="col-12 mt-5">
             
         </div>
-        <div class="row">
-            <div class="col-9 mt-4"></div>
-            <div class="col-3 mt-4 price"></div>            
-        </div>
-        <div class="row">
-            <div class="col-sm-12 col-lg-4 mt-2">
-                <div class="form-group">
-                    <label for="firstName">First Name:</label>
-                    <input type="text" class="form-control" id="firstname" placeholder="First Name" name="First Name" required>
-                  </div>
-            </div>
-            <div class="col-sm-12 col-lg-4 mt-2">
-                <div class="form-group">
-                    <label for="lastName">Last Name:</label>
-                    <input type="text" class="form-control" id="lastname" placeholder="Last Name" name="Last Name" required>
-                  </div>
-            </div>
-            <div class="col-sm-12 col-lg-4 mt-2">
-                <div class="form-group">
-                    <label for="email">Email Address:</label>
-                    <input type="email" class="form-control" id="email" placeholder="Enter your email address" name="Email Address" required>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12 col-lg-6 mt-1">
-                <div class="form-group">
-                    <label for="address">Address:</label>
-                    <input type="text" class="form-control" id="address" placeholder="Enter your address" name="Address" required>
-                  </div>
-            </div>
-            <div class="col-sm-12 col-lg-2 mt-1">
-                <div class="form-group">
-                    <label for="postcode">Post Code:</label>
-                    <input type="text" class="form-control" id="postcode" placeholder="Post code" name="Post Code" required>
-                </div>
-            </div>
-            <div class="col-sm-12 col-lg-4 mt-1">
-                <div class="form-group">
-                    <label for="city">City:</label>
-                    <input type="text" class="form-control" id="city" placeholder="Enter your city" name="City" required>
-                  </div>
-            </div>            
-        </div>
-        <div class="form-group">
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" id="gridCheck">
-              <label class="form-check-label" for="gridCheck">
-                Remind me
-              </label>
-            </div>
-          </div>
-          <button type="submit" class="btn btn-primary" id="finish">Submit Form</button>
-
     </div>
+</div>
 
 
-    
-    </div>
     <div class="bg-light mt-5">
         <div class="container">
             <div class="row pt-4 pb-3">
@@ -138,7 +78,7 @@
             </div>
         </div>
     </div>
-<script src="cart.js"></script>
+<script src="confirmation.js"></script>
 </body>
 
 </html>
