add modified files

--- a/cart.html
+++ b/cart.html
@@ -24,7 +24,7 @@
     <title>Shopping Cart</title>
 </head>
 
-<body>
+<body onload="eraseProduct()">
     <div class="bg-dark">
         <div class="container">
             <div class="row">
