--- a/confirmation.html
+++ b/confirmation.html
@@ -24,7 +24,7 @@
     <title>Shopping Cart</title>
 </head>
 
-<body>
+<body onload="emptyCart()">
     <div class="bg-dark">
         <div class="container">
             <div class="row">
