--- a/detail.html
+++ b/detail.html
@@ -72,7 +72,8 @@
                 <p class="description"></p>
                 <label>Quantity: </label>                
                 <input type="number" value="1" min="1">               
-                <button type="button" class="btn btn-primary cart">Add to Cart</button>            
+                <button type="button" class="btn btn-primary cart">Add to Cart</button>    
+                   
                 
                     <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
                       Color
@@ -83,6 +84,14 @@
                       <a class="dropdown-item btn-light" href="#"></a>
                       <a class="dropdown-item btn-dark" href="#"></a>
                     </div>
+                    <div class="toast">
+                        <div class="toast-header">
+                          Success
+                        </div>
+                        <div class="toast-body">
+                          Item added to the cart.
+                        </div>
+                      </div>    
                   </div>
 
 
