--- a/confirmation.html
+++ b/confirmation.html
@@ -54,9 +54,10 @@
             </div>
         </div>
     </div>
+    <img src="thanks.jpg" class="rounded mx-auto my-3 d-block" alt="thankyou" style="height:200px">
 <div class="container">
     <div class="row">
-        <div class="col-12 mt-5">
+        <div class="col-12 mt-5 text-center">
             
         </div>
     </div>
